@@ -1,33 +1,0 @@
-#pragma once
-#ifdef SERIALCLI
-#define CLI_BUFLEN 20
-class CLI {
-  char m_CLIinstr[CLI_BUFLEN]; // CLI byte being read in
-  int m_CLIstrCount; //CLI string counter
-  char *m_strBuf;
-  int m_strBufLen;
-
-  void info();
-public:
-  CLI();
-  void Init();
-  void println(char *s) { 
-    Serial.println(s); 
-  }
-  void println_P(const char PROGMEM *s);
-  void print(char *s) { 
-    Serial.print(s); 
-  }
-  void print_P(const char PROGMEM *s);
-  void printlnn();
-  void flush() { 
-    Serial.flush(); 
-  }
-  void getInput();
-  uint8_t getInt();
-};
-
-
-
-extern CLI g_CLI;
-#endif // SERIALCLI
