@@ -3,6 +3,10 @@ Change Log
 20201001 SCL
 - move MV_FOR_xx from EnergyMeter.h to openevse.h, and outside of KWH_RECORDING
 	to fix compile error when KWH_RECORDING not defined
+- various code size optimizations for a smaller binary
+- recode energy meter usage calculation for better accuracy using integer math
+- remove Time.h and Time.cpp libraries, not needed as we track time in other ways
+- remove SERIALCLI, it hasn't been maintained in years and is replaced by RAPI
 
 20200816 SCL V7.0.2
 - get rid of LoadThresholds()/g_DefaultThreshData to save space
